--- a/index.html
+++ b/index.html
@@ -1,11 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>web-developer-portfolio</title>
-</head>
-<body>
-    
-</body>
+  </head>
+  <body>
+    <!--Header part open-->
+    <header>
+
+    </header>
+    <!--Header part close-->
+    <!--Main part open-->
+    <main>
+
+    </main>
+    <!--Main part open-->
+    <!--Footer part open-->
+    <footer>
+        
+    </footer>
+      <!--Footer part close-->
+  </body>
 </html>
