--- a/index.html
+++ b/index.html
@@ -4,10 +4,19 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>web-developer-portfolio</title>
+    <link rel="stylesheet" href="style/portfolio.css">
   </head>
   <body>
     <!--Header part open-->
     <header>
+        <nav>
+            <h3>Mary</h3>
+            <ul>
+                <li><a href="" > Portfolio</a></li>
+                <li><a href="">Blog</a></li>
+                <li><button>Hire me</button></li>
+            </ul>
+        </nav>
 
     </header>
     <!--Header part close-->
@@ -18,7 +27,7 @@
     <!--Main part open-->
     <!--Footer part open-->
     <footer>
-        
+
     </footer>
       <!--Footer part close-->
   </body>
