--- a/index.html
+++ b/index.html
@@ -4,17 +4,20 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>web-developer-portfolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style/portfolio.css">
   </head>
   <body>
     <!--Header part open-->
     <header>
         <nav>
-            <h3>Mary</h3>
+            <h3  class="nav-titel">Ma<Span class="text-primary">r</Span>y</h3>
             <ul>
                 <li><a href="" > Portfolio</a></li>
                 <li><a href="">Blog</a></li>
-                <li><button>Hire me</button></li>
+                <li><button class="btn-primary">Hire me</button></li>
             </ul>
         </nav>
 
