--- a/index.html
+++ b/index.html
@@ -65,9 +65,55 @@
 
             </div>
         </section>
+        <!-- what i do section open -->
+        <section>
+            <h3 class="section-titel">What id do</h3>
+            <p class="section-description"  id="what-i-do">
+                I have more than 10 years experience building software for clients all over the world. Below is a quick overview of my main technical skill sets and technologies i use. Want to find out more about my experience? Check out my online resume and project portfolio.
+            </p>
+            <div class="skil-container">
+               <!-- .skills*4>img+h3.skills-titel+p.skills-description -->
+
+               <div class="skills">
+                <img src="images/icons/js.png" alt="image coming soon">
+                <h3 class="skills-titel">Vanilla JavaScript</h3>
+                <p class="skills-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+               </div>
+
+               <div class="skills">
+                <img src="images/icons/react.png" alt="Images comming soon">
+                <h3 class="skills-titel">React</h3>
+                <p class="skills-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+               </div>
+
+               <div class="skills">
+                <img src="images/icons/nodejs.png" alt=" images comming soon">
+                <h3 class="skills-titel">Node.js</h3>
+                <p class="skills-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+               </div>
+               <div class="skills">
+                <img src="images/icons/mongo.png" alt=" Images comming soon">
+                <h3 class="skills-titel">MongoDB</h3>
+                <p class="skills-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+               </div>
+            </div>
+        </section>
+        <!-- resume section -->
+        <section>
+            <h3 class="section-titel">A summary of My Resume</h3>
+            <div class="resume-container">
+                <div class="resume-column">
+                    <h3 class="resume-column-titel">My Education</h3>
+                </div>
+                <div class="resume-column">
+                    <h3 class="resume-column-titel">My Experience</h3>
+                </div>
+            </div>
+
+        </section>
 
     </main>
-    <!--Main part open-->
+    <!--Main part close-->
     <!--Footer part open-->
     <footer>
 
