--- a/index.html
+++ b/index.html
@@ -104,9 +104,61 @@
             <div class="resume-container">
                 <div class="resume-column">
                     <h3 class="resume-column-titel">My Education</h3>
+
+                    <div class="resume-item">
+                        <h2 class="resume-item-titel">My Education</h2>
+                        <h3 class="resume-item-Insitute">Master in Computer Engineering</h3>
+                        <p class="resume-item-description">List skill/technologies here. You can change the icon above
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    </div>
+
+                    <hr>
+
+                    <div class="resume-item">
+                        <h2 class="resume-item-titel">Master in Computer Engineering</h2>
+                        <h3 class="resume-item-Insitute">Harvard University / 2015 - 2017</h3>
+                        <p class="resume-item-description">List skill/technologies here. You can change the icon above
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    </div>
+
+                    <hr>
+
+                    <div class="resume-item">
+                        <h2 class="resume-item-titel">Master in Computer Engineering</h2>
+                        <h3 class="resume-item-Insitute">Harvard University / 2015 - 2017</h3>
+                        <p class="resume-item-description">List skill/technologies here. You can change the icon above
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    </div>
+
                 </div>
                 <div class="resume-column">
                     <h3 class="resume-column-titel">My Experience</h3>
+
+                    <div class="resume-item">
+                        <h2 class="resume-item-titel">Sr. Font End Developer</h2>
+                        <h3 class="resume-item-insitute">Apple Inc / 2020 - Current</h3>
+                        <p class="resume-item description">List skill/technologies here. You can change the icon above
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    </div>
+
+                    <hr>
+
+                    <div class="resume-item">
+                        <h2 class="resume-item-titel">Jr. Font End Developer</h2>
+                        <h3 class="resume-item-insitute">Dribbble Inc / 2018 - 2022</h3>
+                        <p class="resume-item description">List skill/technologies here. You can change the icon above
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    </div>
+
+                     <hr>
+
+                    <div class="resume-item">
+                        <h2 class="resume-item-titel">HTML Developer</h2>
+                        <h3 class="resume-item-insitute">Adobe Inc / 2017 - 2018</h3>
+                        <p class="resume-item description">List skill/technologies here. You can change the icon above
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    </div>
+
                 </div>
             </div>
 
