finished the resume

--- a/index.html
+++ b/index.html
@@ -136,8 +136,8 @@
 
                     <div class="resume-item">
                         <h2 class="resume-item-titel">Sr. Font End Developer</h2>
-                        <h3 class="resume-item-insitute">Apple Inc / 2020 - Current</h3>
-                        <p class="resume-item description">List skill/technologies here. You can change the icon above
+                        <h3 class="resume-item-Insitute">Apple Inc / 2020 - Current</h3>
+                        <p class="resume-item-description">List skill/technologies here. You can change the icon above
                             to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
                     </div>
 
@@ -145,8 +145,8 @@
 
                     <div class="resume-item">
                         <h2 class="resume-item-titel">Jr. Font End Developer</h2>
-                        <h3 class="resume-item-insitute">Dribbble Inc / 2018 - 2022</h3>
-                        <p class="resume-item description">List skill/technologies here. You can change the icon above
+                        <h3 class="resume-item-Insitute">Dribbble Inc / 2018 - 2022</h3>
+                        <p class="resume-item-description">List skill/technologies here. You can change the icon above
                             to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
                     </div>
 
@@ -154,12 +154,15 @@
 
                     <div class="resume-item">
                         <h2 class="resume-item-titel">HTML Developer</h2>
-                        <h3 class="resume-item-insitute">Adobe Inc / 2017 - 2018</h3>
-                        <p class="resume-item description">List skill/technologies here. You can change the icon above
+                        <h3 class="resume-item-Insitute">Adobe Inc / 2017 - 2018</h3>
+                        <p class="resume-item-description">List skill/technologies here. You can change the icon above
                             to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
                     </div>
 
                 </div>
+            </div>
+            <div class="download-cv">
+                <button class="btn-primary">Download CV</button>
             </div>
 
         </section>
