finished the footer

--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
     <!--Main part close-->
     <!--Footer part open-->
     <footer>
-      <div class="scetion-column">
+      <div class="Footer-column">
         <h3 class="section-titel-1">Lets Connect</h3>
         <p class="section-description">
           Please fill out the form on this section to contact with me or call
@@ -231,8 +231,14 @@
           <a href=""><img src="images/icons/insta.png" alt=""></a>
         </div>
       </div>
-      <div class="scetion-column">
+      <div class="Footer-column">
         <h3 class="section-titiel-1">Let’s Message me</h3>
+        <form action="" class="contact">
+          <input type="text" placeholder="Your Name">
+          <input type="email" placeholder="Your E-amil">
+          <textarea placeholder="Enter your massages" name="" id="" cols="20" rows="10"></textarea>
+          <input type="submit" value="Submit"   class="btn-primary" >
+        </form>
       </div>
     </footer>
     <!--Footer part close-->
