--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="style/portfolio.css" />
+    <script src="https://kit.fontawesome.com/69aae3a5f0.js" crossorigin="anonymous"></script>
   </head>
   <body>
     <!--Header part open-->
@@ -31,8 +32,8 @@
             Shot what able cold new see hold.Friendly as an betrayed formerly
             he. Morning because as to society behaved moments.
           </p>
-          <button class="btn-primary">Download cv</button>
-          <button class="btn-primary">Contact</button>
+          <button class="btn-primary"><i class="fa-solid fa-download"></i> Download cv</button>
+          <button class="btn-primary"><i class="fa-solid fa-phone"></i>  Contact</button>
         </div>
         <img
           class="profile-pic"
@@ -211,7 +212,7 @@
           </div>
         </div>
         <div class="download-cv">
-          <button class="btn-primary">Download CV</button>
+          <button class="btn-primary"> <i class="fa-solid fa-download"></i>  Download CV</button>
         </div>
       </section>
     </main>
